[gd_scene load_steps=5 format=2]

[ext_resource path="res://transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://highscores/leaderboard.gd" type="Script" id=2]
[ext_resource path="res://fonts/SmallFont.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="SceneTransitionRect" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Status" type="Label" parent="."]
margin_right = 142.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -100.0
margin_right = 70.0
margin_bottom = -45.0
text = "  Exit  "

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = -0.027
anchor_right = 0.5
anchor_bottom = -0.027
margin_left = -161.5
margin_top = 50.0
margin_right = 161.5
margin_bottom = 64.282
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="PanelContainer"]
margin_right = 323.0
margin_bottom = 49.0
text = "  Leaderboard  "

[node name="Scroll" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.0
margin_top = -225.0
margin_right = 412.0
margin_bottom = 209.0

[node name="Leaderboard" type="VBoxContainer" parent="Scroll"]
margin_right = 824.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/separation = 5

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
